[package]
name = "drcov-rs"
version = "1.0.0"
edition = "2021"
authors = ["starfleetcadet75 <starfleetcadet75@gmail.com>"]
description = "Record code coverage in drcov format"
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/starfleetcadet75/drcov-rs"
homepage = "https://github.com/starfleetcadet75/drcov-rs"
keywords = ["fuzzing", "security"]

[dependencies]
static_assertions = "1.1.0"
